--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,9 @@
         "yiisoft/yii2": "~2.0.6",
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0",
-        "yiisoft/yii2-authclient": "*",
-        "yiisoft/yii2-redis": "^2.0@dev"
+        "yiisoft/yii2-redis": "^2.0@dev",
+        "yiisoft/yii2-authclient": "~2.1.3",
+        "lulubin/yii2-oauth": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
